<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_entspannung_hauptueberschrift"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_rubriken_unterueberschrift"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_auswahlRubrik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <RelativeLayout
        android:id="@+id/image_btn_piano"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        android:background="#FFC107">
    <!--android:onClick="onClickSwitchActivity"-->
    >
    <!--android:background="@drawable/round_btn"-->


        <TextView
            android:layout_width="201dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/image1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/txt_klassMusik"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="57dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/im_piano"
            android:src="@mipmap/piano" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_btn_bird"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        android:background="#FFC107">
        <!--android:background="@drawable/round_btn"-->


        <ImageView
            android:id="@+id/image2"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/im_bird"
            android:src="@mipmap/bird" />

        <TextView
            android:layout_width="189dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/image2"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/txt_natursounds"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_btn_drum"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596"
        android:background="#FFC107">
        <!--android:background="@drawable/round_btn"-->


        <TextView
            android:layout_width="189dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/image4"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/txt_drum"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/im_drum"
            android:src="@mipmap/drum" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_btn_meditation"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        android:background="#FFC107">
        <!--android:background="@drawable/round_btn"-->


        <TextView
            android:layout_width="189dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/image3"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/txt_meditation"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/im_meditation"
            android:src="@mipmap/meditation" />
    </RelativeLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/btn_zuletztgehoert"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />


</androidx.constraintlayout.widget.ConstraintLayout>